--- a/adld.html
+++ b/adld.html
@@ -6,10 +6,10 @@
   <title>ADLD UNITS</title>
   <style>
     :root {
-      --primary-color: rgba(0, 86, 179, 0.8);
-      --secondary-color: rgba(84, 76, 76, 0.8);
+      --primary-color: rgba(139, 69, 19, 0.8); /* Transparent brown */
+      --secondary-color: rgba(160, 82, 45, 0.8); /* Darker transparent brown */
       --text-color: #ffffff;
-      --background-color: #212121;
+      --background-color: #3e2723; /* Dark brown background */
       --text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
     }
 
@@ -29,6 +29,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      background-color: var(--background-color);
     }
 
     header {
@@ -39,9 +40,7 @@
       font-size: 2.5rem;
       text-shadow: var(--text-shadow);
       padding: 10px 20px;
-      text-decoration: none;
-      background-color:transparent;
-      background-color: rgb(102, 102, 97);
+      background-color: rgba(101, 67, 33, 0.5); /* Semi-transparent brown */
       backdrop-filter: blur(10px);
       border-radius: 10px;
     }
@@ -92,7 +91,7 @@
     <a href="unit3.html" class="unit">Unit 3</a>
   </main>
   <footer>
-    &copy; 2025 adld UNITS. All rights reserved.
+    &copy; 2025 ADLD UNITS. All rights reserved.
   </footer>
 </body>
 </html>
